# 2026-06-playwright

./: README.md  pyproject.toml
lesson10/: gui.py  practice3.py  practice4.py  practice5.py
lesson3/: lesson3_1.ipynb  lesson3_2.py
lesson5/: pyqtgraph_demo.py
lesson7/: practice3.py
outputs/bot-exchange-rate/: explore.py  plan.md
outputs/bot-exchange-rate/final_runs/run_1/: final_script.py  final_script_log.txt
outputs/bot-exchange-rate/screenshots/: explore_aria.txt  explore_text.txt
outputs/ptt-gossiping/: explore.py  explore2.py  plan.md
outputs/ptt-gossiping/final_runs/run_1/: final_script.py  final_script_log.txt
outputs/ptt-gossiping/screenshots/: explore2_output.txt  explore_aria_after.txt  explore_aria_initial.txt  explore_text.txt
